src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Bomgar_Username__c</fullName>
        <label>Bomgar Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSL__c</fullName>
        <label>CSL</label>
        <relationshipName>CSL</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>DB_Region__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <color>#009900</color>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                    <color>#3333FF</color>
                    <label>EMEA</label>
                </value>
                <value>
                    <fullName>APAC</fullName>
                    <color>#CC6600</color>
                    <label>APAC</label>
                </value>
                <value>
                    <fullName>LA</fullName>
                    <color>#990000</color>
                    <label>LA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EMS_Formula__c</fullName>
        <formula>IF( EMS_User__c = TRUE , &quot;EMS&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EMS Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMS_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EMS User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IMC_Formula__c</fullName>
        <formula>if( IMC_User__c = TRUE, &quot;IMC&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IMC Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IMC_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IMC User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <formula>Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_User__c</fullName>
        <formula>AND(
 (CONTAINS(Profile.Name, &apos;Portal&apos;)), 
 (IsActive = True)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Portal User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quota_Annual__c</fullName>
        <description>Year Quota</description>
        <label>Quota - Annual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quota_Quarter__c</fullName>
        <label>Quota - Quarter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inform 911</fullName>
                </value>
                <value>
                    <fullName>Inform AE</fullName>
                    <label>Inform AE East</label>
                </value>
                <value>
                    <fullName>Inform AE West</fullName>
                </value>
                <value>
                    <fullName>Inform AM East</fullName>
                </value>
                <value>
                    <fullName>Inform AM West</fullName>
                </value>
                <value>
                    <fullName>Inform CSL</fullName>
                </value>
                <value>
                    <fullName>Respond/Analytics</fullName>
                </value>
                <value>
                    <fullName>Zuercher AM</fullName>
                </value>
                <value>
                    <fullName>Zuercher East</fullName>
                </value>
                <value>
                    <fullName>Zuercher IMC</fullName>
                </value>
                <value>
                    <fullName>Zuercher West</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Cloud_License__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Cloud License</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tiburon_Operations_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to flag specific Tiburon Ops team members; to be utilized as a filter.</description>
        <label>Tiburon Operations Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TimeZone1__c</fullName>
        <formula>Contact.Account.Time_Zone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeZone1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisiNet_Formula__c</fullName>
        <formula>if( VisiNet_User__c = TRUE, &quot;VisiNet&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisiNet Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisiNet_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VisiNet User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>qualtrics__QualtricsURL__c</fullName>
        <description>Optional url to the Qualtrics system.  A default url will be used if this is not specified.</description>
        <label>QualtricsURL</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>qualtrics__QualtricsUserName__c</fullName>
        <label>QualtricsUserName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <columns>Service_Cloud_License__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>TIMEZONE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal,Chatter</value>
        </filters>
        <label>Active Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Bomgar_Enabled_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>Bomgar_Username__c</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal,Chatter</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>startsWith</operation>
            <value>Bomgar</value>
        </filters>
        <label>Active Bomgar Enabled Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Chatter_Free_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <columns>Service_Cloud_License__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Chatter</value>
        </filters>
        <label>Active Chatter Free Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Users_Sales_Team</fullName>
        <columns>Sales_Team__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>Sales_Team__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active Users - Sales Team</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>User_Long_ID__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <label>All Users</label>
    </listViews>
    <listViews>
        <fullName>Impact_Portal_Users_No_Login</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4) AND 5</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/28/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>1/29/2018 12:00 AM</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_LOGIN</field>
            <operation>equals</operation>
        </filters>
        <label>Impact Portal Users - No Login</label>
        <sharedTo>
            <group>Sys_Admin_Helpdesk</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Portal_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.ADDRESS_STATE</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>contains</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Active Portal Users</label>
    </listViews>
    <listViews>
        <fullName>Scott_Bomgar_UserView</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>Bomgar_Username__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Bomgar_Username__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <label>Scott Bomgar UserView</label>
    </listViews>
    <listViews>
        <fullName>Tiburon_ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.COMMUNITY_NICKNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>CORE.USERS.DIVISION</field>
            <operation>contains</operation>
            <value>Tiburon</value>
        </filters>
        <label>Tiburon Active Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Zuercher_ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.COMPANY_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>TIMEZONE</columns>
        <columns>CORE.USERS.DEPARTMENT</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>CORE.USERS.TITLE</columns>
        <columns>MANAGER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>notContain</operation>
            <value>Portal</value>
        </filters>
        <filters>
            <field>CORE.USERS.COMPANY_NAME</field>
            <operation>contains</operation>
            <value>Zuercher</value>
        </filters>
        <label>Zuercher Active Users</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Company_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( CompanyName )</errorConditionFormula>
        <errorDisplayField>CompanyName</errorDisplayField>
        <errorMessage>Company Name must be entered and must match Account Name</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>User_must_be_a_Client</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Contact.Account.Client__c = FALSE,  IsActive =TRUE)</errorConditionFormula>
        <errorMessage>Portal Users can only be activated if their account is an active Client.</errorMessage>
    </validationRules>
</CustomObject>